--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.3
   iconsax: ^0.0.8
+  font_awesome_flutter: ^10.12.0
 
 dev_dependencies:
   flutter_test:
